--- a/frontend/index.html
+++ b/frontend/index.html
@@ -85,18 +85,89 @@
     .hero-social:hover { color: var(--text); }
 
     /* Profile photo — right side of hero */
-    .hero-photo-col { position: relative; z-index: 2; }
+    .hero-photo-col { position: relative; z-index: 2; display: flex; justify-content: center; }
+
+    /* Outer card — like a dark space-themed photo card */
+    .hero-photo-card {
+      position: relative;
+      background: rgba(8, 3, 18, 0.85);
+      border: 1px solid rgba(255,255,255,0.1);
+      border-radius: 4px;
+      padding: 14px 14px 52px 14px;
+      box-shadow:
+        0 0 0 1px rgba(180,25,40,0.12),
+        0 24px 60px rgba(0,0,0,0.7),
+        0 4px 16px rgba(180,25,40,0.08);
+      backdrop-filter: blur(12px);
+      transform: rotate(1.5deg);
+      transition: transform 0.4s ease;
+      max-width: 320px; width: 100%;
+    }
+    .hero-photo-card:hover { transform: rotate(0deg) scale(1.02); }
+
+    /* Red corner accents like photo corners */
+    .hero-photo-card::before,
+    .hero-photo-card::after {
+      content: '';
+      position: absolute;
+      width: 16px; height: 16px;
+      border-color: var(--red);
+      border-style: solid;
+      opacity: 0.5;
+    }
+    .hero-photo-card::before {
+      top: 6px; left: 6px;
+      border-width: 1.5px 0 0 1.5px;
+    }
+    .hero-photo-card::after {
+      bottom: 38px; right: 6px;
+      border-width: 0 1.5px 1.5px 0;
+    }
+
+    /* The actual photo inside the card */
     .hero-photo-frame {
       width: 100%; aspect-ratio: 3/4;
-      border-radius: 18px; overflow: hidden;
-      border: 1px solid var(--border);
-      max-height: 480px;
+      overflow: hidden;
+      border-radius: 2px;
     }
     .hero-photo-bg {
-      width: 100%; height: 100%; min-height: 400px;
+      width: 100%; height: 100%; min-height: 340px;
       background-image: url('profile.jpg');
       background-size: cover;
       background-position: center top;
+      filter: contrast(1.05) saturate(0.9);
+    }
+
+    /* Caption area at the bottom of the card */
+    .hero-photo-caption {
+      position: absolute;
+      bottom: 0; left: 0; right: 0;
+      height: 48px;
+      display: flex; align-items: center; justify-content: center; gap: 8px;
+      padding: 0 14px;
+    }
+    .hero-photo-caption span {
+      font-family: 'Cinzel', serif;
+      font-size: 10px; letter-spacing: 0.22em; text-transform: uppercase;
+      color: rgba(255,255,255,0.35);
+    }
+    .hero-photo-caption .cap-dot {
+      width: 3px; height: 3px; border-radius: 50%;
+      background: var(--red); opacity: 0.6; letter-spacing: 0;
+    }
+
+    /* Subtle scanline texture on photo */
+    .hero-photo-frame::after {
+      content: '';
+      position: absolute; inset: 0;
+      background: repeating-linear-gradient(
+        0deg,
+        transparent,
+        transparent 2px,
+        rgba(0,0,0,0.03) 2px,
+        rgba(0,0,0,0.03) 4px
+      );
+      pointer-events: none;
     }
 
     /* ── ABOUT — no photo, just text + skills ── */
@@ -190,9 +261,9 @@
     /* ── RESPONSIVE ── */
     @media (max-width: 900px) {
       .hero-grid { grid-template-columns: 1fr; gap: 40px; }
-      .hero-photo-col { max-width: 260px; margin: 0 auto; }
-      .hero-photo-frame { aspect-ratio: 1; max-height: 260px; }
-      .hero-photo-bg { min-height: 260px; }
+      .hero-photo-col { max-width: 280px; margin: 0 auto; }
+      .hero-photo-card { max-width: 240px; padding: 10px 10px 44px; }
+      .hero-photo-bg { min-height: 240px; }
       .hero-name { font-size: clamp(2.8rem, 10vw, 4.5rem); }
       .about-cols { grid-template-columns: 1fr; gap: 0; }
       .gb-grid { grid-template-columns: 1fr; }
@@ -273,8 +344,15 @@
           </div>
         </div>
         <div class="hero-photo-col">
-          <div class="hero-photo-frame">
-            <div class="hero-photo-bg"></div>
+          <div class="hero-photo-card">
+            <div class="hero-photo-frame">
+              <div class="hero-photo-bg"></div>
+            </div>
+            <div class="hero-photo-caption">
+              <span>Rae Allen Tura</span>
+              <div class="cap-dot"></div>
+              <span>2025</span>
+            </div>
           </div>
         </div>
       </div>
