--- a/frontend/index.html
+++ b/frontend/index.html
@@ -119,10 +119,8 @@
       animation: floatCard 6s ease-in-out infinite;
       user-select: none;
     }
-    .hero-photo-card.flying { animation: flyAway 0.65s cubic-bezier(0.4,0,0.2,1) forwards; }
-    .hero-photo-card.returning { animation: flyBack 0.8s cubic-bezier(0.34,1.56,0.64,1) forwards; }
-    .hero-photo-card:not(.flying):not(.returning):hover {
-      animation-play-state: paused;
+    /* fly animations applied via JS inline style */
+    .hero-photo-card:hover {
       box-shadow: 0 0 0 1px rgba(180,25,40,0.25), 0 32px 72px rgba(0,0,0,0.8), 0 6px 24px rgba(180,25,40,0.15);
     }
     .hero-photo-card::before, .hero-photo-card::after { content:''; position:absolute; width:16px; height:16px; border-color:var(--red); border-style:solid; opacity:0.5; }
@@ -223,7 +221,7 @@
     #gameCanvas {
       border: 1px solid var(--border);
       border-radius: 10px;
-      background: transparent;
+      background: #00000a;
       display: block;
       cursor: crosshair;
       max-width: 100%;
@@ -752,10 +750,10 @@
         shootCooldown = 12
       }
 
-      // Move bullets
+      // Move & draw bullets
+      bullets.forEach(b => { b.y += b.vy })
       bullets = bullets.filter(b => b.y > -10)
       bullets.forEach(b => {
-        b.y += b.vy
         gctx.beginPath(); gctx.arc(b.x, b.y, 3, 0, Math.PI*2)
         gctx.fillStyle = '#c8202e'; gctx.fill()
         gctx.beginPath(); gctx.arc(b.x, b.y+5, 2, 0, Math.PI*2)
@@ -767,29 +765,28 @@
       asteroidInterval = Math.max(30, 120 - level * 10)
       if (asteroidTimer >= asteroidInterval) { spawnAsteroid(); asteroidTimer = 0 }
 
-      // Move & draw asteroids
-      asteroids = asteroids.filter(a => a.y < H + a.sz*2)
-      asteroids.forEach(a => {
-        a.x += a.vx; a.y += a.vy; a.rot += a.rotSpd
-        drawAsteroid(a)
+      // Move asteroids
+      asteroids.forEach(a => { a.x += a.vx; a.y += a.vy; a.rot += a.rotSpd })
 
-        // Bullet collision
+      // Bullet-asteroid collision (safe iteration with flags)
+      const hitBullets = new Set()
+      asteroids.forEach(a => {
         bullets.forEach((b, bi) => {
+          if (hitBullets.has(bi)) return
           const dx = b.x - a.x, dy = b.y - a.y
           if (Math.sqrt(dx*dx+dy*dy) < a.sz) {
+            hitBullets.add(bi)
             a.hp--
             spawnParticles(b.x, b.y, a.hp <= 0 ? '#c8202e' : '#8a8296', a.hp <= 0 ? 12 : 5)
-            bullets.splice(bi, 1)
             if (a.hp <= 0) {
               score += Math.floor(a.sz * (level * 0.5 + 1))
               updateHUD()
-              a.y = 9999 // mark for removal
+              a.dead = true
             }
           }
         })
-
         // Ship collision
-        if (ship.invincible === 0) {
+        if (ship.invincible === 0 && !a.dead) {
           const dx = ship.x - a.x, dy = ship.y - a.y
           if (Math.sqrt(dx*dx+dy*dy) < a.sz + 12) {
             lives--
@@ -800,6 +797,11 @@
           }
         }
       })
+
+      // Remove hit bullets and dead/offscreen asteroids, then draw
+      bullets = bullets.filter((_, i) => !hitBullets.has(i))
+      asteroids = asteroids.filter(a => !a.dead && a.y < H + a.sz*2)
+      asteroids.forEach(a => drawAsteroid(a))
 
       // Particles
       particles = particles.filter(p => p.life > 0)
@@ -952,23 +954,26 @@
     const card = document.getElementById('photoCard')
     photoFlying = true
 
-    // Remove float, add fly class
-    card.classList.add('flying')
+    // Stop float, trigger fly
+    card.style.animation = 'none'
+    card.style.transform = 'rotate(1.5deg) translate(0,0) scale(1)'
+    // Force reflow so the none takes effect
+    void card.offsetWidth
+    card.style.animation = 'flyAway 0.65s cubic-bezier(0.4,0,0.2,1) forwards'
 
-    // After fly-away finishes, wait a beat then fly back
-    card.addEventListener('animationend', function onEnd() {
+    card.addEventListener('animationend', function onEnd(e) {
+      if (e.animationName !== 'flyAway') return
       card.removeEventListener('animationend', onEnd)
       setTimeout(() => {
-        card.classList.remove('flying')
-        card.classList.add('returning')
-        card.addEventListener('animationend', function onBack() {
+        card.style.animation = 'flyBack 0.8s cubic-bezier(0.34,1.56,0.64,1) forwards'
+        card.addEventListener('animationend', function onBack(e) {
+          if (e.animationName !== 'flyBack') return
           card.removeEventListener('animationend', onBack)
-          card.classList.remove('returning')
-          // Resume float
+          card.style.animation = ''
           photoFlying = false
-        }, { once: true })
-      }, 320)
-    }, { once: true })
+        })
+      }, 280)
+    })
   }
 
 </script>
