--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,3 +1,5 @@
+fix the game, it does not display in my website:
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -546,14 +548,14 @@
       s.tw += s.ts
       const a = s.a*(Math.sin(s.tw)*0.2+0.8)
       ctx.beginPath(); ctx.arc(s.x,s.y,s.r,0,Math.PI*2)
-      ctx.fillStyle=rgba(225,218,255,${a}); ctx.fill()
+      ctx.fillStyle=`rgba(225,218,255,${a})`; ctx.fill()
     })
     if(frame%220===0 && shooting.length<3) shooting.push({x:Math.random()*W*.7,y:Math.random()*H*.35,vx:6+Math.random()*4,vy:2.5+Math.random()*2,life:1})
     shooting = shooting.filter(s=>s.life>0)
     shooting.forEach(s => {
       s.x+=s.vx; s.y+=s.vy; s.life-=0.018
       const len=90, g=ctx.createLinearGradient(s.x,s.y,s.x-s.vx*(len/s.vx),s.y-s.vy*(len/s.vx))
-      g.addColorStop(0,rgba(255,195,205,${s.life})); g.addColorStop(1,'rgba(160,40,70,0)')
+      g.addColorStop(0,`rgba(255,195,205,${s.life})`); g.addColorStop(1,'rgba(160,40,70,0)')
       ctx.strokeStyle=g; ctx.lineWidth=1.5; ctx.beginPath(); ctx.moveTo(s.x,s.y)
       ctx.lineTo(s.x-s.vx*(len/s.vx),s.y-s.vy*(len/s.vx)); ctx.stroke()
     })
@@ -573,9 +575,9 @@
     document.getElementById('gbEmpty').style.display='none'
     document.getElementById('gbList').innerHTML=''
     try {
-      const res = await fetch(${API}/comments)
+      const res = await fetch(`${API}/comments`)
       const data = await res.json()
-      document.getElementById('gbCount').textContent=${data.length} message${data.length!==1?'s':''}
+      document.getElementById('gbCount').textContent=`${data.length} message${data.length!==1?'s':''}`
       document.getElementById('gbLoading').style.display='none'
       if(!data.length){ document.getElementById('gbEmpty').style.display='block'; return }
       const list = document.getElementById('gbList')
@@ -583,7 +585,7 @@
         const initials = c.name.split(' ').map(n=>n[0]).join('').toUpperCase().slice(0,2)
         const date = new Date(c.created_at).toLocaleDateString('en-US',{year:'numeric',month:'short',day:'numeric'})
         const div = document.createElement('div'); div.className='card gb-item'
-        div.innerHTML=<div class="gb-item-header"><div class="gb-avatar">${initials}</div><div><p class="gb-name">${c.name}</p><p class="gb-date">${date}</p></div></div><p class="gb-msg">${c.message}</p>
+        div.innerHTML=`<div class="gb-item-header"><div class="gb-avatar">${initials}</div><div><p class="gb-name">${c.name}</p><p class="gb-date">${date}</p></div></div><p class="gb-msg">${c.message}</p>`
         list.appendChild(div)
       })
     } catch { document.getElementById('gbLoading').style.display='none'; document.getElementById('gbEmpty').style.display='block'; document.getElementById('gbEmpty').textContent='Could not load messages.' }
@@ -597,7 +599,7 @@
     if(!name||!message){ eMsg.textContent='Please fill in all fields.'; eMsg.style.display='block'; return }
     btn.disabled=true; btn.textContent='Sending...'
     try {
-      const res=await fetch(${API}/comments,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({name,message})})
+      const res=await fetch(`${API}/comments`,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({name,message})})
       if(!res.ok) throw new Error()
       sMsg.textContent='✓ Message sent successfully!'; sMsg.style.display='block'
       document.getElementById('gb-name').value=''; document.getElementById('gb-msg').value=''
@@ -711,7 +713,7 @@
       for (let i = 1; i < a.verts.length; i++) gctx.lineTo(a.verts[i].x, a.verts[i].y)
       gctx.closePath()
       const dmg = 1 - (a.hp / a.maxHp)
-      gctx.strokeStyle = dmg > 0 ? rgba(200,32,46,0.9) : 'rgba(200,195,220,0.75)'
+      gctx.strokeStyle = dmg > 0 ? `rgba(200,32,46,0.9)` : 'rgba(200,195,220,0.75)'
       gctx.lineWidth = 1.5
       gctx.stroke()
       gctx.fillStyle = dmg > 0 ? 'rgba(80,10,20,0.3)' : 'rgba(20,10,35,0.4)'
@@ -734,7 +736,7 @@
         s.y += s.sp
         if (s.y > H) { s.y = 0; s.x = Math.random()*W }
         gctx.beginPath(); gctx.arc(s.x, s.y, s.r, 0, Math.PI*2)
-        gctx.fillStyle = rgba(200,195,255,${s.a}); gctx.fill()
+        gctx.fillStyle = `rgba(200,195,255,${s.a})`; gctx.fill()
       })
 
       // Move ship
@@ -839,7 +841,7 @@
       gctx.clearRect(0, 0, W, H)
       stars2.forEach(s => {
         gctx.beginPath(); gctx.arc(s.x, s.y, s.r, 0, Math.PI*2)
-        gctx.fillStyle = rgba(200,195,255,${s.a}); gctx.fill()
+        gctx.fillStyle = `rgba(200,195,255,${s.a})`; gctx.fill()
       })
       drawShip(W/2, H/2 + 20, 0.6)
       gctx.font = '400 13px "DM Mono"'
